# rosca-platform

./: Cargo.toml  LICENSE  README.md  config.rs  main.rs  naive-last-schema.sql
.github/: FUNDING.yml
handlers/: auth.rs  contribution.rs  loan.rs  member.rs  mod.rs  partner.rs  payout.rs  penalty.rs  repayment.rs  role.rs  rosca.rs  router.rs  settings.rs  template.rs  user.rs
