[package]
name = "rosca_api"
version = "0.1.0"
edition = "2021"
description = "A RESTful API for managing Rotating Savings and Credit Associations (ROSCAs)"
authors = ["Macharia Barii"]

[dependencies]
axum = "0.6"                          # Web framework for routing and handling requests
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"                    # JSON handling
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json"] }  # Database access with PostgreSQL
tokio = { version = "1.0", features = ["full"] }    # Async runtime
tracing = "0.1"                       # Logging and tracing
tracing-subscriber = "0.3"            # Tracing subscriber for formatting logs
chrono = "0.4"                        # Date and time utilities
printpdf = "0.7"                      # PDF generation for exports
rust_xlsxwriter = "0.74"              # Excel generation for exports
base64 = "0.22"                       # For encoding binary data
image = "0.24"                        # Image handling for PDF logos
bcrypt = "0.15"                       # Password hashing for auth
jsonwebtoken = "9.3"                  # JWT for authentication tokens
rand = "0.8"                          # Random number generation for reset tokens
tower-http = { version = "0.4", features = ["trace"] }  # HTTP utilities like tracing layer
csv = "1.2"                           # CSV processing during data imports.
thiserror = "1.0"

[dev-dependencies]
# Add any other
